<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registro_contato_titulo" />

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Nome" />

        <EditText
            android:id="@+id/editText_contato_nome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:ems="10"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Telefones" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/editText_contato_telefone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="6"
            android:inputType="phone" />

        <Spinner
            android:id="@+id/spinner_contato_operadoras"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/operadoras"
            android:prompt="@string/selecione" />
	    <Button
	        android:id="@+id/button_registrar"
	        android:layout_width="50dp"
	        android:layout_height="50dp"
	        android:onClick="adicionarTelefoneCache"
	        android:text="@string/adicionar" />
    </LinearLayout>


    <Button
        android:id="@+id/button_registrar"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginLeft="200.0sp"
        android:layout_marginTop="50.0sp"
        android:onClick="registrarContato"
        android:text="@string/registrar" />

</LinearLayout>