<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <Button
        android:id="@+id/button_fechar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="fechar"
        android:text="fechar" />

    <TextView
        android:id="@+id/textView_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60.0sp"
        android:text="@string/titulo" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="horizontal"
		android:layout_width="wrap_content"
    	android:layout_height="wrap_content">

         <TextView
        	android:id="@+id/textView_email"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/email" />

   	    <EditText
	        android:id="@+id/editText_email"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="14dp"
	        android:ems="10"
	        android:inputType="text" />
	</LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="horizontal"
		android:layout_width="wrap_content"
    	android:layout_height="wrap_content">

         <TextView
        	android:id="@+id/textView_pin"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/pin" />

   	    <EditText
	        android:id="@+id/editText_pin"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="14dp"
	        android:ems="10"
	        android:inputType="text" />
	</LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="vertical"
		android:layout_width="wrap_content"
	   	android:layout_height="wrap_content">
       	
       	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			android:orientation="horizontal"
        	android:layout_marginLeft="210.0sp"
        	android:layout_width="150dp"
			android:layout_height="50dp">
			    <Button
			        android:id="@+id/button_ok"
			        android:layout_width="100dp"
			        android:layout_height="50dp"
			        android:onClick="autenticar"
			        android:text="@android:string/ok" />
		</LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			android:orientation="horizontal"
			android:layout_marginLeft="170.0sp"
        	android:layout_width="150dp"
			android:layout_height="50dp">
			    <Button
			        android:id="@+id/button_registro"
			        android:layout_width="150dp"
			        android:layout_height="50dp"
			        android:onClick="paginaRegistraConta"
			        android:text="@string/registre_se" />
		</LinearLayout>
	</LinearLayout>
	
</LinearLayout>
